<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9f9"
    tools:context=".SignUp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/centerline3"
        android:layout_centerInParent="true">

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:text="@string/forgotGreet"
            android:textColor="@color/dotnet"
            android:textSize="30sp"
            android:textStyle="bold">
        </TextView>
        <ImageView
            android:src="@drawable/meetme"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="60dp">

        </ImageView>
        <RelativeLayout
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/gradient_nofilled">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:text="@string/forgotTitle"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold">

            </TextView>

        </RelativeLayout>

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ForgotPasswordField_Email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/universalborder"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/centerline3"
        >

        <EditText
            android:id="@+id/ForgotPasswordInput_Email"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:hint="@string/loginHintEmail"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/dotnetSub"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="SpeakableTextPresentCheck,TextFields">

        </EditText>
    </com.google.android.material.textfield.TextInputLayout>


    <RelativeLayout
        android:id="@+id/forgotPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/ForgotPasswordField_Email"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/gradient_nofilled">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/forgotForgot"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>

    </RelativeLayout>


    <TextView
        android:id="@+id/goToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotPassword"
        android:textSize="16sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:text="@string/navigateLogin"
        android:textAlignment="center"
        android:textColor="@color/dotnet">

    </TextView>


</RelativeLayout>